# nono_solver

./: .clang-format  .hgignore  CMakeLists.txt  README.md  cell.cpp  cell.hpp  main.cpp  reversed_vector.hpp  row_solver.cpp  row_solver.hpp  row_solver_bf.cpp  row_solver_bf.hpp
.devcontainer/: Dockerfile  devcontainer.json  install_ninja.sh
line_solver/: cell.hpp  line_solver.hpp  row_solver.hpp
line_solver/impl/: cell.cpp  line_solver.cpp  reversed_container.hpp  row_solver.cpp
puzzle_solver/: CMakeLists.txt
puzzle_solver/impl/: puzzle_data.cpp
puzzle_solver/puzzle_solver/: puzzle_data.hpp
puzzle_solver_cli/: CMakeLists.txt  input_large  input_large.jsonc  input_small  input_small.jsonc  main.cpp  puzzle_data.cpp  puzzle_data.hpp  puzzle_reader.cpp  puzzle_reader.hpp
row_solver/: block.hpp  cell.hpp  reversed_vector.hpp  row_solver.hpp
row_solver/impl/: reversed_container.hpp  reversed_vector.hpp  row_solver.cpp
tests/: CMakeLists.txt  row_solver_bf.cpp  row_solver_testing.cpp
tests/codewars/: sol.py
tests/line_solver_bf/: line_solver_bf.cpp
tests/line_solver_testing/: iterators.cpp  line_solver_testing.cpp
tests/row_solver_bf/: row_solver_bf.cpp  row_solver_bf.hpp
tests/row_solver_testing/: iterators.cpp  iterators.hpp  row_solver_testing.cpp
tests/spoj/: main.cpp
tests/timus/solution/: Readme.txt  main.cpp
tests/timus/testing/: main.cpp
timus_task/: input.txt  main.cpp  output.txt
